gender differences from jenna as sent to nber

--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -2,7 +2,7 @@
 \input{preambleappendix}
 \input{output/mainstatistics}
 
-\externaldocument{abc_treatmenteffects}
+\externaldocument{abc_treatmenteffects_2018-07-20a_jbb}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
@@ -64,3 +64,12 @@
 
 \end{document}
 
+
+\end{appendix}
+
+\clearpage
+\singlespacing
+\bibliography{heckman}
+\bibliographystyle{chicago}
+
+\end{document} 
