--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -16,7 +16,7 @@ Both interventions involved intensive center-based care for subjects in the trea
 \end{threeparttable}
 \end{table}
 
-The program focused on developing language, cognition, and social-emotional skills.\footnote{During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.} Program curricula emphasized child-led learning of skills important for future learning \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}. The teachers and classroom aids were trained throughout the intervention. Researchers and child development experts at FPG observed classroom interactions and gave detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}.\footnote{These aspects of the program relate to structural quality rather than process quality, i.e., the daily experiences of the children \citep{Thomason_LaParo_2009_EED}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{Phillipsen_etal_1997_ECRQ}. However, recent studies find that curricula and professional development are even more highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{Slot_etal_2015_Dutch_ECRQ}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were intensive, especially compared to standards of that era \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.}
+The program focused on developing language, cognition, and social-emotional skills.\footnote{During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.} Program curricula emphasized child-led learning of skills important for future learning \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}. The teachers and classroom aides were trained throughout the intervention. Researchers and child development experts at FPG observed classroom interactions and gave detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}.\footnote{These aspects of the program relate to structural quality rather than process quality, i.e., the daily experiences of the children \citep{Thomason_LaParo_2009_EED}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{Phillipsen_etal_1997_ECRQ}. Recent studies find that curricula and professional development are highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{Slot_etal_2015_Dutch_ECRQ}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were intensive, especially compared to standards of that era \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.}
 
 CARE included an additional arm of treatment. Besides the services offered in ABC, those in the CARE treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on improving parental problem-solving skills. To test the effectiveness of this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component at ages 0-5, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses of CARE finding no effect of the early-age home-visiting component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} These analyses justify merging the treatment groups of ABC and CARE. We henceforth analyze the samples as coming from a single ABC/CARE program.
 
@@ -41,7 +41,7 @@ Randomization for ABC/CARE was conducted on child pairs matched on family backgr
 
 ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that all but one of the referred mothers agreed to participate in the initial randomization.\footnote{\citet{Ramey_Yeates_Short_1984_CD,Campbell_Ramey_1995_AERJ}.}  We discuss the pattern of missing observations in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting methods described in Appendix~\ref{app:method_partialobs}.
 
-Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropping out was primarily related to the health of the child and the mobility of families rather than as a result of  dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed.\footnote{\citet{Burchinal_Campbell_etal_1997_CD}.} Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Dropping out occurs \emph{after} randomization and is balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and there was no compromised randomization.\footnote{The modest sample size after accounting for dropouts, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future research should repeat these analyses in larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.}
+Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropping out was primarily related to the health of the child and the mobility of families rather than as a result of  dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed.\footnote{\citet{Burchinal_Campbell_etal_1997_CD}.} Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Dropping out occured \emph{after} randomization and was balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization.\footnote{The modest sample size after accounting for dropouts, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future research should repeat these analyses in larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.}
 
 \subsection{Control Group Substitution}
 
@@ -66,7 +66,7 @@ Note: Panel (a) displays the cumulative distribution function of enrollment in a
 
 Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternative formal childcare programs. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enrolled generally stay enrolled over time. As control-group children aged, they were more likely to enter childcare.\footnote{See Figure~\ref{fig:control-sub_a} in Appendix~\ref{app:control-subbb}.}
 
-As a group, the children in the control group that enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home, although, as we show below, there are important differences by gender of the child. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index that defines ABC/CARE eligibility. Control children who attend alternative formal care generally have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group.
+As a group, the children in the control group who enroll in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home, although, as we show below, there are important differences by gender of the child. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index that defines ABC/CARE eligibility. Control children who attend alternative formal care generally have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group.
 
 Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and those who did not attend alternative childcare. The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is whether the mother works. The mother is more likely to work at baseline for children attending alternative care. We discuss selection into alternative care settings by gender of the child in Section~\ref{sec:gender-differences}.
 
