--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -1,11 +1,11 @@
-This paper examines gender differences in the impacts of treatment of an influential early childhood program targeted to disadvantaged children. Instead of  analyzing gender differences in the number of program treatment effects one at the time, and cherry-picking outcomes with ``significant'' treatment effects, we analyze aggregate summaries of treatment effects. We document that girls benefit more than boys in the sense that effect sizes are generally much bigger for girls than boys and more treatment effects are positive and statistically significant for girls.
+This paper examines gender differences in the percentage of treatment effects favoring men of an influential early childhood program targeted to disadvantaged children. Instead of  analyzing gender differences in the number of program treatment effects one at a time and cherry-picking outcomes reporting only ``significant'' effects, we analyze aggregate summaries of treatment effects. We document that girls benefit more than boys in the sense that effect sizes are generally much bigger for girls than boys and more treatment effects are positive and statistically significant for girls.
 
-We examine the sources of the gender difference. They originate in differences in control conditions. Baseline family environments for girls are worse. At baseline, fathers of sons are more likely to be present at home than are fathers of daughters. This leads to more resources at baseline for boys. They initially start out more advantaged. The more advantaged boys are more likely to stay at home. Differences in family environments explain why treatment effects are generally larger for males in comparison to alternative formal care than in comparison with staying at home. 
+We examine the source of the gender difference. They originate in differences in control conditions. Baseline family environments for girls are worse. At baseline, fathers of sons are more likely to be present at home than are fathers of daughters. This leads to more resources at baseline for boys. The more advantaged boys are more likely to stay at home. Differences in family environments explain why treatment effects are generally larger for males in comparison to alternative formal care than in comparison with staying at home.
 
-For girls, the differences in outcomes across the two control conditions are not as stark. For both genders, treatment enhances family income through supporting maternal employment and improved HOME scores. The increments in family income is greater for girls, so are the increments in HOME scores. However, the level of family income after treatment is greater for boys despite the greater growth of family income for girls.
+For girls, the differences in outcomes across the two control conditions is not as stark. For both genders, treatment enhances family income through supporting maternal employment and improved HOME scores. The increments in family income are greater for girls, so are the increments in HOME scores. However, the level of family income after treatment is greater for boys despite the greater growth of family income for girls.
 
-Our analysis has implications for the recent literature on gender differences in the consequences of childcare. \citet{Baker_etal_2008_Universal_Childcare_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects} establish harmful effects of childcare. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} localize these harmful effects to boys. One interpretation of their findings is that young boys are more vulnerable to being taken away from home than are young girls.\footnote{See \citet{Garcia_etal_2019_ECE_IMHJ}.} A rich literature supports the greater vulnerability of boys.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} and \citet{Schore_2017_IMHJ} for examples.}
+Our analysis has implications for the recent literature on gender differences in the consequences of childcare. \citet{Baker_etal_2008_Universal_Childcare_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects} establish harmful effects of childcare. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} localize these harmful effects to boys. One interpretation of their findings is that young boys are more vulnerable to being taken away from home than are young girls.\footnote{See \citet{Garcia_etal_2019_ECE_IMHJ}.} A rich literature supports the greater vulnerability of boys.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} and \citet{Schore_2017_IMHJ}.}
 
 Another interpretation, and the one emphasized in this paper, is that male home environments are generally better. This is consistent with the evidence of \citet{Dahl_Moretti_2008_RES} who show that fathers are more likely to stay at home with the mother if a boy is born. This improves family income at baseline. Our evidence on baseline differences by gender is consistent with this interpretation. Girls benefit relatively more in terms of the gains in HOME scores and in family income.
 
-Our data are too crude to distinguish sharply between these two interpretations. However, the weight of the evidence in this paper supports the latter interpretation. Baseline conditions need to be accounted for in interpreting the sources of gender differences in treatment effects. 
+Our data are too crude to distinguish sharply between these two interpretations. However, the weight of the evidence in this paper supports the latter interpretation. Baseline conditions need to be carefully accounted for in interpreting the sources of gender differences in treatment effects. 
