--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,14 +1,14 @@
-This paper examines impacts by gender of two closely related influential early childhood programs: the Carolina Abecedarian Project (ABC) and its sister program, the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. Both were evaluated by the method of random assignment. While specific outcomes of ABC/CARE have been studied, our paper is the first to aggregate and summarize all of the reported outcomes to evaluate the program.
+This paper examines impacts by gender of two closely related influential early childhood programs: the Carolina Abecedarian Project (ABC) and its sister program, the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. Both were evaluated by the method of random assignment. While specific outcomes of ABC/CARE have been previously studied, our paper is the first to aggregate and summarize all of the reported outcomes to evaluate the program.
 
 ABC/CARE was conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. This pioneering program focused on improving the early years of disadvantaged children. It is a template for many current and proposed early childhood programs.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: the Infant Health and Development Program (IHDP)---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control children were followed through their mid 30s, with data collected on multiple dimensions of human development with over 100 reported program outcomes.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Anderson_2008_JASA,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Heckman_2006_Science}, \citet{Anderson_2008_JASA} and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} note separate treatment effects of early childhood programs by gender. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} only use health data, and find that men are more affected by ABC/CARE than women. \citet{Anderson_2008_JASA} constructs factors using data up to the age-21 collection and finds that women benefit more than men in terms of his constructed factors, but does not use the crime, health, and employment data used in this paper.}
 
-There are pronounced gender differences in the treatment effects of ABC/CARE. To avoid cherry-picking, we analyze aggregates of treatment effects as reported in Table~\ref{table:summary}. To understand the entries to the table, consider the row for the outcome ``employment.'' In the control group, all mean outcomes are larger for males compared to females. This is denoted by the fraction $1.000$. In the table, we also report an exact, non-parametric test of the null hypothesis that the distribution of employment outcomes in the control group is the same for males and females. The $p$-value associated with the test is $0.117$.\footnote{The exact non-parametric test is described more precisely later in the paper.} The comparable statistics for the treatment group are $0.75$ and a $p$-value of $0.080$, respectively.
+There are pronounced gender differences in the treatment effects of ABC/CARE. To avoid cherry-picking, we analyze aggregates of treatment effects as reported in Table~\ref{table:summary}. The aggregates are constructed by counting the proportion of outcomes by category for which male mean treatment effects for items in a category equal or exceed female treatment effects. To understand the entries to the table, consider the row for the outcome ``employment.'' In the control group, all mean outcomes are larger for males compared to females. This is denoted by the fraction $1.000$. In the table, we also report an exact, non-parametric test of the null hypothesis that the distribution of employment outcomes in the control group is the same for males and females. The $p$-value associated with the test is $0.117$.\footnote{The exact non-parametric test is described more precisely later in the paper.} The comparable statistics for the treatment group are $0.75$ and a $p$-value of $0.080$, respectively.
 
-Treatment reduces gaps between males and females. The difference between the male-female gap for treatments and the male-female gap for controls is $0.25$. We decisively reject the null of equality of the pooled male and pooled female distributions. This pattern holds generally for the outcomes that we study.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is a common practice. Examples include \citet{Schweinhart_Montie_ea_2005_BOOKlifetime,Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Heckman_2005_Perry,Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.}
+Treatment reduces gaps in these aggregates between males and females. The difference between the male-female gap for treatments and the male-female gap for controls is $0.25$. We decisively reject the null of equality of the pooled male and pooled female distributions. This pattern holds generally for the outcomes that we study.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is a common practice. Examples include \citet{Schweinhart_Montie_ea_2005_BOOKlifetime,Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Heckman_2005_Perry,Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} Females benefit more than males from treatment, which reduces the male-female gaps in the controls. However, males also benefit substantially from the program.
 
-\begin{sidewaystable}[!htbp]
+\begin{sidewaystable}[H]
 \centering
-\scriptsize
+\footnotesize
 \begin{threeparttable}
 \caption{Summary of Gender Differences in Outcome Aggregates} \label{table:summary}
  \label{tab:proportion-table-ranksign}
@@ -20,12 +20,10 @@ Treatment reduces gaps between males and females. The difference between the mal
 \end{threeparttable}
 \end{sidewaystable}
 
-Females benefit more than males from treatment, reducing the male-female gaps in the controls. However, males also benefit substantially from the program.
-
 Differential treatment effects by gender arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal human capital is lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls in the control group who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools. Their families were more resource constrained compared to their male counterparts for whom more fathers are present.\footnote{We do not have precise measures of the quality of individual alternative preschools, although we do know that girls were more disadvantaged. This implies that their families would have fewer resources to spend on higher-quality alternative preschools.} Girls benefited more from treatment because without it they would have grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
 
 Parents of the controls in ABC/CARE had the option of keeping their children at home or sending them to daycare facilities other than ABC/CARE. There is an important difference in the take-up of alternatives by the gender of controls. Among control-group girls, those from more disadvantaged families stay at home. Among control-group boys, the more advantaged stay at home instead of attending lower-quality alternative childcare. Boys benefit more from participating in ABC/CARE when compared to attending alternative preschools because of their relatively better home environments. Girls benefit more from ABC/CARE when compared to home-based care because those who stay at home are more disadvantaged.
 
-A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, presents a cost-benefit analysis of ABC/CARE that monetizes program treatment effects. While a greater number of statistically significant treatment effects is found for girls, monetized values for boys are greater. Boys can do more costly harm that the program prevents.
+A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, presents a cost-benefit analysis of ABC/CARE that monetizes program treatment effects. While a greater number of statistically significant treatment effects is found for girls, the monetized values of these effects are greater for boys. Untreated boys can do more costly harm, which the program prevents.
 
-This paper unfolds in the following way. Section~\ref{sec:data} describes the experimental data we analyze. We document the take-up of  alternative out of home childcare attended by many control-group subjects. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender. We show sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} summarizes and places our analysis in the context of a  broader literature.
+This paper unfolds in the following way. Section~\ref{sec:data} describes the experimental data we analyze. We document the take-up of  alternative out-of-home childcare attended by many control-group subjects. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender. We show sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} summarizes and places our analysis in the context of a  broader literature.
