--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -183,7 +183,7 @@ Assumption~\ref{ass:summary} has two distinct aspects that can be resolved furth
 \end{remark}
 
 \begin{remark} \label{remark:cohort} \textbf{Accounting for Cohort Effects}
-A second aspect of Assumption~\ref{ass:summary}, that the structural relationships and distributions are identical in the experimental and non-experimental samples, embeds an implicit assumption about the absence of cohort effects. In particular, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$ or distribution $F^d_{n,a} \left(\bm{z} | \text{ \text{\textbf{Fix}} } \bm{\Omega} = \bm{\omega}\right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the age range of the experiment. Note that this does not mean that there are no cohort effects in the outcome of interest, $\bm{Y}^d_{k,a}$. Instead, it means that there are no cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$, $k \in \{e,n\}$.
+A second aspect of Assumption~\ref{ass:summary}, that the structural relationships and distributions are identical in the experimental and non-experimental samples, embeds an implicit assumption about the absence of cohort effects in the post-treatment forecasted sample. In particular, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$ or distribution $F^d_{n,a} \left(\bm{z} | \text{ \text{\textbf{Fix}} } \bm{\Omega} = \bm{\omega}\right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the age range of the experiment. Note that this does not mean that there are no cohort effects in the outcome of interest, $\bm{Y}^d_{k,a}$. Instead, it means that there are no cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$, $k \in \{e,n\}$.
 \end{remark}
 
 \doublespacing
@@ -195,7 +195,7 @@ For $a \in \{ 1, \ldots, \bar{A} \}$ and $d \in \{0,1\}$
 \begin{equation}
 supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}^d, \bm{X}^d_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ).
 \end{equation}
-We further require that the path of inputs in the post-treatment lives of the experimental treatments and controls have counterparts in the non-experimental sample. This includes accounting for cohort effects.
+We also require that the path of inputs in the post-treatment lives of the experimental treatments and controls have counterparts in the non-experimental sample. This includes accounting for cohort effects.
 \end{assumption}
 
 \doublespacing
@@ -431,7 +431,7 @@ Table~\ref{table:predsens} shows that there is close agreement between non-param
 
 \noindent One contribution of this paper is forecasting and monetizing the life-cycle benefits of the enhanced health and reduced health costs of participants using a version of Equation~\eqref{eq:outcome}. The model recognizes that: (i) health outcomes such as diabetes, heart disease, or death are absorbing states; and (ii) there is no obvious terminal time period for benefits and costs except death, which we forecast.
 
-We adapt the Future Adult Model (FAM)---a forecasting model for health conditions and costs developed by Dana Goldman and coauthors \citep{Goldman_etal_2015_Future-Elderly-Model-Report}.\footnote{Appendix~\ref{appendix:health} discusses the FAM methodology in detail. It is not a competing risks model, but forecasts vectors of incidence and costs of disease one category at a time using univariate models.} We forecast health outcomes of program participants from their mid 30s up to their projected age of death.\footnote{The simulation starts at the age in which we observe the subjects' age-30 follow-up.} Our version of FAM passes a variety of specification tests and accurately forecasts health outcomes and health behaviors.\footnote{In Appendix~\ref{appendix:health-validation}, we present tests of the model assumptions and predictive performance for population aggregate health and health behavior outcomes.}
+We adapt the Future Adult Model (FAM)---a forecasting model for health conditions and costs developed by Dana Goldman and coauthors \citep{Goldman_etal_2015_Future-Elderly-Model-Report}.\footnote{Appendix~\ref{appendix:health} discusses the FAM methodology in detail. It is not a competing risks model, but forecasts vectors of incidence and costs of disease one category at a time using univariate models.} We forecast health outcomes of program participants from their mid 30s up to their projected age of death.\footnote{The simulation starts at the age in which we observe the subjects' age-30 follow-up.} Our version of FAM passes a variety of specification tests and accurately forecasts health outcomes and health behaviors.\footnote{\citet{Goldman_etal_2015_Future-Elderly-Model-Report} present tests of the model assumptions and predictive performance for population aggregate health and health behavior outcomes.}
 
 Our methodology has four steps--extensive details are provided in Appendix~\ref{appendix:health}: (i) follow an adapted version of the steps in Section~\ref{section:cbamethodology} to predict the health state occupancy probabilities for the ABC/CARE subjects; (ii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID;\footnote{QALY is a measure which reweighs a year of life according to its quality given the burden of disease \citep{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} (iii) estimate medical cost models using MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (iv) forecast the medical expenditures and QALYs that correspond to the simulated individual health trajectories.\footnote{As part of step (i), we impute some of the variables used to initialize the FAM models (see  Appendix~\ref{section:FAM_ABC_impute}).}
 
