--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -73,7 +73,7 @@ University of Southern California}
 
 \noindent \textbf{Editor. pg.\ 15 seems to describe a key component of your analysis. You seek to compare, say, whether labor income is different between treated and non- treated, and since you cannot observe that for the people in your sample, you use a synthetic sample for prediction. Fine. But then the key surely is to get the difference between these two groups correctly, i.e., that the two synthetic groups of the auxiliary sample differ by ideally exactly as much as they would if we were to follow the original two groups. pg.\ 15 talks much about predicting future incomes, but we don't care much about the level itself: we care much more about the difference between these two groups. There is little said to assure the reader that one gets the right answer for that difference.}
 
-\noindent \textit{Response.} That is correct. One would get valid forecasts from accurate predictions of the treatment-control difference. That is all we need. We rely on stronger conditions predicting levels for both the treatment and the control. They provide additional testable implications---Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}---which we satisfy (i.e., we do not reject the null). However, we also discuss the minimal conditions required to accurately forecast life-cycle mean differences.
+\noindent \textit{Response.} That is correct. One would get valid forecasts from accurate predictions of the treatment-control difference. That is all we need. We rely on stronger conditions predicting levels for each of the treatment and the control groups. They provide additional testable implications---Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}---which we satisfy (i.e., we do not reject the null). However, we also discuss the minimal conditions required to accurately forecast life-cycle mean differences.
 
 \noindent \textbf{The background variables will be the same for the treated and untreated, for example. So how, exactly, does the difference in treatment show up in the synthetic groups?  Just the development of labor income until the observable age? That might be fine, but then clearly say so. Something else?}
 
@@ -86,7 +86,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Connected to that: I found assumption Assumption~\ref{ass:summary} on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then \ref{ass:summary} is not an assumption: it is a definition of the auxiliary sample.}
 
-\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct a synthetic cohort and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second nonparametric approach, we match individuals on $\bm{B}_k$ and $\bm{X}^d_{k,a}$, and bypass estimating production functions. Agreement between the two approaches is reassuring.
+\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct a synthetic cohort and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second, non-parametric approach, we match individuals on $\bm{B}_k$ and $\bm{X}^d_{k,a}$, and bypass estimating production functions. Agreement of the estimates from  the two approaches is reassuring.
 
 \noindent \textbf{And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption''~\ref{ass:summary}. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}
 
@@ -98,7 +98,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Is it really true that you can get by with (6)? If you want to match individual-by-individual (as described in my main comment 4 above), might we want to condition also on outcomes up to age a*? Perhaps I am misunderstanding that condition, since you also state something about X potentially containing lagged variables. You weren't all that clear on this before (see p. 19, top), and this now comes back to haunt me in understanding what it is you do. This needs clarification.}
 
-\noindent \textit{Response.} We apologize for this source of confusion. We now clarify this point in the text and in this response. In Equation~\eqref{eq:outcome} we define the relationship between the outcomes of interest $\bm{Y}_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call ``outcomes up to age a''). The key assumption for obtaining our forecasts is that the treatment effects are generated by changes in $\bm{X}_{k,a}^d$ through a policy-invariant production function. Recall that in our main analyses we do not match individual-to-individual. Instead, we create $\bm{B}_k$-comparable samples on which we fit production functions. We insert the experimentally-induced changes in $\bm{X}_{k,a}^d$ in the fitted production functions to forecast out of sample. These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}. However, we also discuss an explicit matching procedure (using $\bm{B}_k$ and $\bm{X}^d_{k,a}$) as an alternative nonparametric approach that is valid under exogeneity.
+\noindent \textit{Response.} We apologize for this source of confusion. We now clarify this point in the text and in this response. In Equation~\eqref{eq:outcome} we define the relationship between the outcomes of interest $\bm{Y}_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call ``outcomes up to age a''). The key assumption for obtaining our forecasts is that the treatment effects are generated by changes in $\bm{X}_{k,a}^d$ through a policy-invariant production function. Recall that in our main analyses we do not match individual-to-individual. Instead, we create $\bm{B}_k$-comparable samples on which we fit production functions. We insert the experimentally-induced changes in $\bm{X}_{k,a}^d$ in the fitted production functions to forecast out of sample treatment effects. These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}. However, we also discuss an explicit matching procedure (using $\bm{B}_k$ and $\bm{X}^d_{k,a}$) as an alternative non-parametric approach that is valid under exogeneity.
 
 \noindent \textbf{Editor. Cut figure 2: TMI. This is technical appendix material. Key results ``in print'' only, please.}
 
@@ -167,11 +167,11 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor.  ``the two stages can be compressed''. Cool. But we don't care whether this can be done: we care only whether you actually do this. Do you? And if so, exactly how? Details should be provided in the technical appendix.}
 
-\noindent \textit{Response.} We more concisely state why would this be useful and what it implies. We show that this method is in agreement with our model-based method. We present results using this alternative in addition to our main model-based method. Instead of following the steps presented in Section~\ref{section:cbamethodology}, an alternative is simply to use matching on $\bm{B}^d_k$ and $\bm{X}_{k,a}$ to form average profiles of treatment-group-alikes and control-group-alikes (and take the respective mean difference between these two groups). This is just non-parametric matching. Doing this gives a useful check on our method because, under exogeneity, it compresses our procedure to a simple and intuitive estimator that relies on the same key assumptions as our model-based approach, without directly estimating the technology. Spelling out our method is useful. It is a method that some readers will be familiar with, and will find appealing given the robustness of our results to using it. We discuss it succinctly in the text but in greater detail in Appendix~\ref{appendix:methodology}. Agreement in the estimates from the two methods is a confirmation of exogeneity of $\bm{X}^d_{k,a}$ and the validity of the functional forms used in our model-based approach.
+\noindent \textit{Response.} We more concisely state why would this be useful and what it implies. We show that estimates from  this method are in agreement with estimates from our model-based method. We present results using this alternative in addition to our main model-based method. Instead of following the steps presented in Section~\ref{section:cbamethodology}, an alternative is simply to use matching on $\bm{B}^d_k$ and $\bm{X}_{k,a}$ to form average profiles of treatment-group-alikes and control-group-alikes (and take the respective mean difference between these two groups). This is just non-parametric matching. Doing this gives a useful check on our method because, under exogeneity, it compresses our procedure to a simple and intuitive estimator that relies on many of the same key assumptions as our model-based approach, without directly estimating the technology. Spelling out our method is useful. It is a method that some readers will be familiar with, and will find appealing given the robustness of our results to using it. We discuss it succinctly in the text but in greater detail in Appendix~\ref{appendix:methodology}. Agreement in the estimates from the two methods is a confirmation of exogeneity of $\bm{X}^d_{k,a}$ and the validity of the functional forms used in our model-based approach.
 
 \noindent \textbf{Editor. pg.\ 16, ``There is close agreement of the constructed profiles within the age group of the experimental sample.'' See my main comment 3: if the constructed profile is obtained per matching the profile within the age group of the experimental sample, isn't this then a tautological statement? The same holds for the next paragraph. I.e., what, precisely, is used for construction, and what is the independent verification here? This is very unclear.}
 
-\noindent \textit{Response.} The explanation that we gave in our submitted paper failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide in Section~\ref{section:cbamethodology}. The first matching procedure (on $\bm{B}$) generates samples that resemble our treatment and control groups at baseline. This is how we construct synthetic cohorts. They are people sampled from the same set $\mathcal{B}_0$. Later in the paper, we also use a matching procedure using baseline variable and the $\bm{X}_{k,a}^d$ to make nonparametric forecasts. The reason why Figure~\ref{figure:controltests} is compelling is because in the auxiliary sample there is no treatment at all (everyone who satisfies $\bm{B} \in \mathcal{B}_0$ has some counterpart in the control sample). Thus, our forecast of the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We now state this more clearly in Section~\ref{section:cbamethodology}.
+\noindent \textit{Response.} The explanation that we gave in our submitted paper failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide in Section~\ref{section:cbamethodology}. The first matching procedure (on $\bm{B}$) generates samples that resemble our treatment and control groups at baseline. This is how we construct synthetic cohorts. They are people sampled from the same set $\mathcal{B}_0$. Later in the paper, we also use a matching procedure using baseline variable and the $\bm{X}_{k,a}^d$ to make non-parametric forecasts. The reason why Figure~\ref{figure:controltests} is compelling is because in the auxiliary sample there is no treatment at all---everyone who satisfies $\bm{B} \in \mathcal{B}_0$ has some (nearest-neighbor) counterpart in the control sample. Thus, our forecast of the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We now state this more clearly in Section~\ref{section:cbamethodology}.
 
 \noindent \textbf{Editor. On pg.\ 20 and just above Assumption~\ref{ass:summary}, Y now suddenly has five subscripts, when it only had three before, and the common subscripts are in a different order. I find that confusing. You then get to equation (3), and now there are four subscripts. This is not a compromise: this is even more confusing.}
 
@@ -193,7 +193,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 1. First, the title is misleading. The ABC/CARE projects do not in any way represent ``prototypical" child care. The title is misleading and might suggest that one could expect comparable benefits from almost any form of child care. This was center-based child care that offered low staff to child ratios, active monitoring, used a curriculum, etc. The title should be revised to be more accurate. Similarly, the program should be referred to more accurately as a child development center form of childcare throughout the paper and its features briefly reiterated in the discussion.}
 
-\noindent \textit{Response.} Based on this comment, we have retitled our paper replacing the word prototypical with influential. We maintain that the program is influential, but as you say it may not be prototypical. However, as we note, many programs around the world are based on an ABC/CARE template. In footnote 6, as well as Table A.33, we provide a list of programs around the world that have replicated, and continue to replicate, ABC/CARE. We explicitly acknowledge in the introduction that ``ABC/CARE was offered as a child development form of childcare,'' and that ``it is a prototype of what early childhood education should be (e.g., high staff to child ratios, active monitoring of children, and relaxation of time constraints to single mothers starting form birth) and not necessarily what early childhood is nationwide.''
+\noindent \textit{Response.} Based on this comment, we have retitled our paper replacing the word prototypical with influential. We maintain that the program is influential, but as you say it may not be prototypical. However, as we note, many programs around the world are based on an ABC/CARE template. In footnote 6, as well as Table A.33, we provide a list of programs around the world that have replicated ABC/CARE. We explicitly acknowledge in the introduction that ``ABC/CARE was offered as a child development form of childcare,'' and that ``it is a prototype of what early childhood education should be (e.g., high staff to child ratios, active monitoring of children, and relaxation of time constraints to single mothers starting form birth) and not necessarily what early childhood is nationwide.''
 
 \noindent \textbf{Referee 1. Second, this paper unduly relies on citation of the authors' own unpublished analyses and sometimes the unpublished work of others. This is not necessary in most cases. The authors fail to cite in the appropriate locations the peer-reviewed publication(s) that make(s) the same point about many foundational issues, such as the study's original design and prior seminal findings. For example, the fact that the children in the control condition were not prevented from attending center-based childcare in the community appears in major prior articles and the benefits of this intermediate, non-randomized treatment ``substitute" has been effectively documented (notably, \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}). Why would the authors cite an unpublished source of their own (specifically, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, unpublished) for this fact? Actually, the \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} is cited so often that one wonders how much it overlaps with this paper and what is needed from that not readily available paper to understand this current paper? This strongly detracts from the current paper.}
 
@@ -269,7 +269,7 @@ same (if possible: is it? Comment on that!).}
  
 \noindent \textbf{If the paper is supposed to be a template, what should the researcher do if she rejects a given assumption, such as exogeneity or structural invariance? This seems like a likely event given the strong assumptions. Is it possible to make progress under alternative or weaker assumptions?}
 
-\noindent \textit{Response.} Yes, it is possible to proceed under weaker assumptions, if the only object to forecast is the mean difference between the treatment and control. This weaker condition is provided in Equation~\eqref{eq:nec}. We note, however, that the stronger assumptions we invoke give us sharper testable implications. Mean independence in levels separately for treatments and controls allows us to derive the implications in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} and provide the tests in Figures~\ref{figure:controltests} and~\ref{fig:labor-income-profiles}. This would not be possible if Equation~\eqref{eq:nec} were the only assumption. We are now cautious in our exposition and make the important point that failure to reject is not tantamount to the truth of the null---it is just consistent with it.
+\noindent \textit{Response.} Yes, it is possible to proceed under weaker assumptions, if the only object to forecast is the mean difference between the treatment and control. This weaker condition is provided in Equation~\eqref{eq:nec}. We note, however, that the stronger assumptions we invoke give us sharper testable implications. Mean independence in levels separately for treatments and controls allows us to derive the implications in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} and provide the tests in Figures~\ref{figure:controltests} and~\ref{fig:labor-income-profiles}. This would not be possible if Equation~\eqref{eq:nec} were the only assumption. We are now careful in our exposition and make the important point that failure to reject is not tantamount to the truth of the null---it is just consistent with it.
 
 \noindent \textbf{In the body of the paper, the authors consistently argue that they test and do not reject the assumptions they make. Looking at the appendices, this seems to be true in many but not all cases. Also, in some of the cases it is true, the sampling error is significant and one cannot say much about the testable implications. The authors should be clear about this.}
 
